--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularWeatherApp</title>
+  <title>Clima</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://previews.123rf.com/images/luplupme/luplupme1607/luplupme160700473/60297234-vector-del-icono-del-sol-aislado-en-el-fondo-blanco-sun-aislado-del-icono-del-vector-del-dise%C3%B1o-del-ver.jpg">
 </head>
 <body>
   <app-root></app-root>
